fixed height issue of class container in mv and overflow issue on zooming

--- a/styles_v2/_defaults.scss
+++ b/styles_v2/_defaults.scss
@@ -14,7 +14,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  // overflow-x: hidden;
+  overflow: hidden;
   color: get-color("light-1");
 }
 
